# two-layer-model

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml
.cargo/: config.toml
.github/workflows/: bump.yaml  ci.yml  release.yaml
changelog/: 10.feature.md  9.improvement.md
docs/: changelog.md  rust_tips.md
notebooks/: component-python.py  component-rust.md  coupled_model.py  state_serialisation.py
notebooks/helpers/: models.py
python/rscm/: __init__.py
python/rscm/_lib/: __init__.pyi  core.pyi
python/two_layer_model/: __init__.py  _core.pyi  components.py  core.py
python/two_layer_model/_lib/: __init__.pyi  components.pyi  core.pyi
rscm-components/: Cargo.toml  README.md
rscm-components/src/components/: carbon_cycle.rs  co2_erf.rs  mod.rs
rscm-components/src/components/ocean_carbon_cycle/: mod.rs  ocean_surface_partial_pressure.rs
rscm-components/tests/: coupled_models.rs
rscm-core/: Cargo.toml  README.md
rscm-core/src/: component.rs  errors.rs  example_components.rs  lib.rs  model.rs  timeseries.rs  timeseries_collection.rs
rscm-core/src/interpolate/: linear_spline.rs  mod.rs  next.rs  previous.rs
rscm-core/src/interpolate/strategies/: linear_spline.rs  mod.rs  next.rs  previous.rs
rscm-core/src/ivp/: mod.rs
rscm-core/src/python/: component.rs  example_component.rs  mod.rs  model.rs  timeseries.rs  timeseries_collection.rs
rscm-core/tests/models/: carbon_cycle.rs  co2_erf.rs  mod.rs
src/: lib.rs  model.rs  timeseries.rs  two_layer.rs
src/python/: mod.rs
tests/: conftest.py  test_add.py  test_example_component.py  test_model.py  test_timeseries.py  test_timeseries_collection.py  test_two_layer.py
