[package]
name = "two-layer-model"
version = "0.1.0"
edition = "2021"

[lib]
name = "two_layer_model"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3-stub-gen = "0.6.0"
uom = "0.36.0"
ode_solvers = "0.4.0"
numpy = "0.21.0"
rscm-core = { path = "rscm-core" }


[dependencies.pyo3]
version = "0.21.0"
# extension-module builds a python extension module and is required to use `cargo test`
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["extension-module", "abi3-py38"]

[workspace]
members = ["rscm-core"]
