[package]
name = "rscm"
version = "0.1.0"
edition = "2021"

[lib]
name = "rscm"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib", "rlib"]

[dependencies]
ode_solvers = "0.4.0"
ndarray = { version = "*", features = ["serde"] }
numpy = "0.21.0"
rscm-core = { path = "rscm-core" }
rscm-components = { path = "rscm-components" }
pythonize = "0.21.1"
serde = { version = "1.0.210", features = ["derive"] }
typetag = "0.2"


[dependencies.pyo3]
# This is pinned to 0.21 until a new release of the numpy crate (https://github.com/PyO3/rust-numpy/pull/435)
version = "0.21.0"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["abi3-py38"]

[workspace]
members = ["rscm-core", "rscm-components"]

[build-dependencies]
pyo3-build-config = "*"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "../assets/katex-header.html" ]
