[package]
name = "rscm-core"
version = "0.1.0"
edition = "2021"
description = "Core traits and functionalities for the creation of reduced-complexity climate models"
readme = "README.md"
keywords = ["physics", "scm", "climate"]
categories = ["science"]
workspace = ".."

[dependencies]
ode_solvers = "0.4.0"
ndarray = { version = "*", features = ["serde-1"] }
numpy = "0.21.0"
# Pin nlgebra until new release of ode_solvers
nalgebra = "0.32.6"
petgraph = { version = "0.6.5", features = ["serde-1"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
typetag = "0.2"
log = "0.4"
num = "0.4"
is_close = "0.1"
thiserror = "1.0"
pythonize = "0.21.1"
toml = "0.8.19"


[dependencies.pyo3]
version = "0.21.0"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["abi3-py38", "multiple-pymethods"]
